minor changes to tagging to better adhere to BEM standards

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
           </p>
           <a href="./pages/menu.html"
             ><button class="description__button">
-              <p></p>
               SHOP NOW
               <div class="button__border"></div></button
           ></a>
@@ -168,12 +167,12 @@
         class="footer__background-img2"
         src="./Assets/coffee-beans-logo-and-footer.svg"
       />
-      <div id="address" class="footer__address footer__section">
+      <div class="footer__address footer__section">
         <h3 class="second-title">Address</h3>
-        <p>503 Broadway Penthouse</p>
-        <p>New York</p>
+        <p class="footer__text">503 Broadway Penthouse</p>
+        <p class="footer__text">New York</p>
       </div>
-      <div id="hours" class="footer__hours footer__section">
+      <div class="footer__hours footer__section">
         <h3 class="second-title">Hours</h3>
         <p class="footer__text"><strong>Monday - Friday:</strong> 9am - 7pm</p>
         <p class="footer__text">
