--- a/pages/menu.html
+++ b/pages/menu.html
@@ -46,9 +46,9 @@
       </div>
       <div class="header__header-links">
         <ul class="header-links__list">
-          <a class="link list__a" href="#hot-drinks"><li>Hot Drinks</li></a>
-          <a class="link list__a" href="#cold-drinks"><li>Cold Drinks</li></a>
-          <a class="link list__a" href="#pastries"><li>Pastries</li></a>
+          <a class="link" href="#hot-drinks"><li>Hot Drinks</li></a>
+          <a class="link" href="#cold-drinks"><li>Cold Drinks</li></a>
+          <a class="link" href="#pastries"><li>Pastries</li></a>
         </ul>
       </div>
     </header>
