The endless renaming of tags to be BEM compliant continues

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header" role="banner">
-      <nav class="header__nav-bar" aria-label="Main navigation">
+      <nav class="nav-bar" aria-label="Main navigation">
         <div class="nav-bar__banner-content">
           <img
             class="banner-content__icon icon"
