--- a/pages/menu.html
+++ b/pages/menu.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header" role="banner">
-      <nav class="header__nav-bar" aria-label="Main navigation">
+      <nav class="nav-bar" aria-label="Main navigation">
         <div class="nav-bar__banner-content">
           <img
             class="banner-content__icon icon"
@@ -38,17 +38,23 @@
           </li>
         </ul>
       </nav>
-      <div class="header__menu">
-        <div class="menu__title-box">
+      <div class="header-menu">
+        <div class="header-menu__title-box">
           <div class="title-box__border"></div>
           <h1 class="first-title title-box__title">MENU</h1>
         </div>
       </div>
-      <div class="header__header-links">
+      <div class="header-links">
         <ul class="header-links__list">
-          <a class="link" href="#hot-drinks"><li>Hot Drinks</li></a>
-          <a class="link" href="#cold-drinks"><li>Cold Drinks</li></a>
-          <a class="link" href="#pastries"><li>Pastries</li></a>
+          <a class="link header-links__link" href="#hot-drinks"
+            ><li class="header-links__list-item">Hot Drinks</li></a
+          >
+          <a class="link header-links__link" href="#cold-drinks"
+            ><li class="header-links__list-item">Cold Drinks</li></a
+          >
+          <a class="link header-links__link" href="#pastries"
+            ><li class="header-links__list-item">Pastries</li></a
+          >
         </ul>
       </div>
     </header>
