--- a/pages/menu.html
+++ b/pages/menu.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../scss/partials/global.css" />
+    <link rel="stylesheet" href="../scss/partials/_global.scss" />
     <link rel="stylesheet" href="../scss/menu.css" />
     <title>Coffee Shop - Menu</title>
   </head>
