Added keyframe animations as well as hover and active pseudoselectors for responsive elements.  These were added to buttons, the can image on the landing page, discount section, Nitro link in nav-bar and menu title box

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             alt="coffee bean logo"
           />
           <a class="link nav-bar__a" href="#"
-            ><h3 class="second-title">nitro</h3></a
+            ><h3 class="second-title nav-bar__second-title">nitro</h3></a
           >
         </div>
         <ul class="nav-bar__list">
