Updated mobile first media queries for global and menu pages.  Landing page still set in desktop first format. Added fonts through download and host method and commented out links in .HTML files.

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="../scss/partials/_global.scss" />
     <link rel="stylesheet" href="../scss/menu.css" />
     <title>Coffee Shop - Menu</title>
@@ -21,7 +21,7 @@
             alt="coffee bean logo"
           />
           <a class="link banner-content__a" href="../index.html"
-            ><h3 class="second-title">nitro</h3></a
+            ><h3 class="second-title nav-bar__second-title">nitro</h3></a
           >
         </div>
         <ul class="nav-bar__list">
