--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="./scss/partials/_global.scss" />
     <link rel="stylesheet" href="./scss/landing.css" />
     <title>Coffee Shop - Home</title>
@@ -20,7 +20,7 @@
             src="./Assets/coffee-beans-logo-and-footer.svg"
             alt="coffee bean logo"
           />
-          <a class="link nav-bar__a" href="#"
+          <a class="link banner-content__a" href="#"
             ><h3 class="second-title nav-bar__second-title">nitro</h3></a
           >
         </div>
