Created folders for both Images and Logos for better organization.  Made a few subtle adjustements for better responsive web design on all screen types.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-bar__banner-content">
           <img
             class="banner-content__icon icon"
-            src="./Assets/coffee-beans-logo-and-footer.svg"
+            src="./Assets/Logos/coffee-beans-logo-and-footer.svg"
             alt="coffee bean logo"
           />
           <a class="link banner-content__a" href="#"
@@ -57,7 +57,7 @@
         </div>
         <img
           class="section__img"
-          src="./Assets/coffeebeans-hero.png"
+          src="./Assets/Images/coffeebeans-hero.png"
           alt="coffee bag"
         />
       </div>
@@ -76,7 +76,7 @@
             <div class="product-card__container-top">
               <img
                 class="container-top__img"
-                src="./Assets/coffeebeans.png"
+                src="./Assets/Images/coffeebeans.png"
                 alt="coffee beans"
               />
             </div>
@@ -92,7 +92,7 @@
             <div class="product-card__container-top">
               <img
                 class="container-top__img"
-                src="./Assets/coldbrew.png"
+                src="./Assets/Images/coldbrew.png"
                 alt="cold brew"
               />
             </div>
@@ -108,7 +108,7 @@
             <div class="product-card__container-top">
               <img
                 class="container-top__img"
-                src="./Assets/inhousebrew.png"
+                src="./Assets/Images/inhousebrew.png"
                 alt="in-house brew"
               />
             </div>
@@ -136,9 +136,9 @@
               of the way, we strive for excellence.
             </p>
             <div class="section1__images">
-              <img class="images__icon" src="./Assets/planting.svg" />
-              <img class="images__icon" src="./Assets/coffee-beans.svg" />
-              <img class="images__icon" src="./Assets/coffee-cup.svg" />
+              <img class="images__icon" src="./Assets/Logos/planting.svg" />
+              <img class="images__icon" src="./Assets/Logos/coffee-beans.svg" />
+              <img class="images__icon" src="./Assets/Logos/coffee-cup.svg" />
             </div>
             <a href="#"
               ><button class="section1__button button">
@@ -148,7 +148,7 @@
           </div>
           <div class="top-section__section2">
             <div class="section2__border"></div>
-            <img class="section2__img" src="./Assets/tiltedcan.png" />
+            <img class="section2__img" src="./Assets/Images/tiltedcan.png" />
           </div>
         </div>
         <div class="discount-section__bottom-section">
@@ -161,11 +161,11 @@
     <footer class="footer" role="contentinfo">
       <img
         class="footer__background-img1"
-        src="./Assets/coffee-beans-logo-and-footer.svg"
+        src="./Assets/Logos/coffee-beans-logo-and-footer.svg"
       />
       <img
         class="footer__background-img2"
-        src="./Assets/coffee-beans-logo-and-footer.svg"
+        src="./Assets/Logos/coffee-beans-logo-and-footer.svg"
       />
       <div class="footer__address footer__section">
         <h3 class="second-title">Address</h3>
@@ -187,13 +187,13 @@
           aria-label="Facebook"
           ><img
             class="social__icon icon"
-            src="./Assets/Facebook-Icon.svg"
+            src="./Assets/Logos/Facebook-Icon.svg"
             alt="facebook"
         /></a>
         <a class="social__link" href="https://yelp.com" aria-label="Yelp"
           ><img
             class="social__icon icon"
-            src="./Assets/Yelp-Icon.svg"
+            src="./Assets/Logos/Yelp-Icon.svg"
             alt="yelp"
         /></a>
         <a
@@ -202,7 +202,7 @@
           aria-label="Instagram"
           ><img
             class="social__icon icon"
-            src="./Assets/Instagram-Icon.svg"
+            src="./Assets/Logos/Instagram-Icon.svg"
             alt="instagram"
         /></a>
       </div>
