MAde it so social media links open in a separate tab.  Made minor adjustments with regards to responsive web design so website looks good on all screen sizes.

--- a/index.html
+++ b/index.html
@@ -185,12 +185,17 @@
           class="social__link"
           href="https://facebook.com"
           aria-label="Facebook"
+          target="blank"
           ><img
             class="social__icon icon"
             src="./Assets/Logos/Facebook-Icon.svg"
             alt="facebook"
         /></a>
-        <a class="social__link" href="https://yelp.com" aria-label="Yelp"
+        <a
+          class="social__link"
+          href="https://yelp.com"
+          aria-label="Yelp"
+          target="blank"
           ><img
             class="social__icon icon"
             src="./Assets/Logos/Yelp-Icon.svg"
@@ -200,6 +205,7 @@
           class="social__link"
           href="https://instagram.com"
           aria-label="Instagram"
+          target="blank"
           ><img
             class="social__icon icon"
             src="./Assets/Logos/Instagram-Icon.svg"
