Continued refining accessibility to WCAG standards.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
   </head>
   <body>
     <header class="header" role="banner">
-      <nav
-        class="nav-bar"
-        aria-label="Main navigation"
-        role="navigation"
-        tabindex="0"
-      >
+      <nav class="nav-bar" aria-label="Main navigation">
         <div class="nav-bar__banner-content">
           <img
             class="banner-content__icon icon"
@@ -69,13 +64,13 @@
         />
       </div>
     </header>
-    <main class="main" role="main">
+    <main class="main">
       <section
         id="our-products"
         class="main__our-products"
-        aria-labelledby="our-products"
+        aria-labelledby="our-products-heading"
       >
-        <h2 class="first-title our-products__title">Our Products</h2>
+        <h2 class="first-title our-products__title" id="our-products-heading">Our Products</h2>
         <div class="our-products__product-cards">
           <div class="product-cards__coffee-beans product-card">
             <div class="product-card__container-top">
@@ -127,7 +122,7 @@
           </div>
         </div>
         <a href="./pages/menu.html" aria-label="View our menu and shop"
-          ><button class="our-products__button" aria-label="View all products">
+          ><button class="our-products__button">
             VIEW ALL
             <div class="button__border"></div></button
         ></a>
@@ -135,9 +130,9 @@
       <section
         id="discount-section"
         class="main__discount-section"
-        aria-labelledby="discount-section"
+        aria-labelledby="discount-section-heading"
       >
-        <div class="discount-section__top-section" id="discount-section">
+        <div class="discount-section__top-section" id="discount-section-heading">
           <div class="top-section__section1">
             <h2 class="first-title section1__title">We're Different</h2>
             <p class="section1__description">
