--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,17 +9,12 @@
   </head>
   <body>
     <header class="header" role="banner">
-      <nav
-        class="nav-bar"
-        aria-label="Main navigation"
-        tabindex="0"
-        role="navigation"
-      >
+      <nav class="nav-bar" aria-label="Main navigation">
         <div class="nav-bar__banner-content">
           <img
             class="banner-content__icon icon"
             src="../Assets/Logos/coffee-beans-logo-and-footer.svg"
-            alt="coffee bean logo"
+            alt="Logo of Nitro Coffee Shop"
           />
           <a class="link banner-content__a" href="../index.html"
             ><h3 class="second-title nav-bar__second-title">nitro</h3></a
